Calculate Pages Frontend Update
add img, offer css file...

--- a/src/main/resources/templates/customerList.html
+++ b/src/main/resources/templates/customerList.html
@@ -112,12 +112,13 @@
 		<div class="user-page-main">
 			<div class="user-title">
 				<div class="username-settings">
-					<a href="user-page.html"><span class="badge text-bg-secondary"><i
-								class='bx bx-arrow-back'></i></span></a>
+<!--					<a href="user-page.html"><span class="badge text-bg-secondary"><i-->
+<!--								class='bx bx-arrow-back'></i></span></a>-->
 					<span class="username-text">Admin</span>
 				</div>
 				<div class="select-type">
 					<a href="#"><span class="badge text-bg-info">Change KDV Rate</span></a>
+					<a href="#"><span class="badge text-bg-danger"><i class='bx bx-log-out'></i> Sign Out</span></a>
 				</div>
 			</div>
 			<div class="user-page">
