Contion Calculate Fixed

--- a/src/main/resources/templates/trafficInsuranceCalculate.html
+++ b/src/main/resources/templates/trafficInsuranceCalculate.html
@@ -82,7 +82,7 @@
                                         <div class="planImageCircleRight"><img th:src="@{/img/plan-circle-bottom.png}" src="/src/main/resources/static/img/plan-circle-bottom.png" alt=""></div>
                                         <small>Aviva</small>
                                         <h3 th:text="${insurance.offer + '₺'}"></h3>
-                                        <em>Free Forever</em>
+                                        <em>Car Insurance</em>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Most Comprehensive Offer</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>All Authorized Services and Special Services</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Original Glass (Exempt)</p>
@@ -105,7 +105,7 @@
                                         <div class="planImageCircleRight"><img th:src="@{/img/plan-circle-bottom.png}" src="/src/main/resources/static/img/plan-circle-bottom.png" alt=""></div>
                                         <small>Liberty Mutual</small>
                                         <h3 th:text="${insurance.offer + '₺'}"></h3>
-                                        <em> User / Month </em>
+                                        <em> Car Insurance </em>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Most Comprehensive Offer</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>All Authorized Services and Special Services</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Original Glass (Exempt)</p>
@@ -129,7 +129,7 @@
                                         <div class="recommended-price">Recommended</div>
                                         <small>AXA</small>
                                         <h3 th:text="${insurance.offer + '₺'}"></h3>
-                                        <em> User / Month </em>
+                                        <em> Car Insurance </em>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Most Comprehensive Offer</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>All Authorized Services and Special Services</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Original Glass (Exempt)</p>
