--- a/src/main/resources/templates/homeInsuranceRefund.html
+++ b/src/main/resources/templates/homeInsuranceRefund.html
@@ -1,42 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th"http://www.thymeLeaf.org">
-
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Insurance Cancellation</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Car Refund</title>
+    <!-- Bootsrapt -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+	<!-- İcon -->
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<!-- CSS -->
+	<link rel="stylesheet" th:href="@{/css/offer.css}" href="src/main/resources/static/css/offer.css">
+	<!-- Angularjs -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-	
-	<link href="https://css.gg/css" rel="stylesheet" />
-	
-	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
-	<link rel="stylesheet" href="" th:href="@{/css/home.css}">
-
-	<style>
-		button {
-			font-size: 0.8rem;
-			font-weight: 700;
-			outline: none;
-			border: none;
-			background-color: black;
-			color: aliceblue;
-			padding: 13px 30px;
-			cursor: pointer;
-			text-transform: uppercase;
-		}
-
-		button:hover {
-			background-color: #3f3e3e;
-		}
-	</style>
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-
 <body ng-app="myApp">
-
-	<!--Navbar-->
+     <!--Navbar-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid px-5">
           <a class="navbar-brand" href="#">Logo</a>
@@ -72,53 +56,113 @@
         </div>
       </nav>
 	<!--	End Navbar-->
+    <div class="user-page-wrapper" id="userPageContent">
+        <div class="user-page-main">
+          <div class="col-md-12">   
+              <div class="row refund-main">
+                     <div class="receipt-main col-xs-12 col-sm-12 col-md-6 col-xs-offset-1 col-sm-offset-1 col-md-offset-3">
+                         <div class="row refund-user-details">
+                            <div class="refund-print">
+                                <img class="img-responsive" th:src="@{/img/Liberty-Mutual-Logo.png}" src="/src/main/resources/static/img/Liberty-Mutual-Logo.png" width="150px">
+                                <div>
+                                    <a class="btn btn-sm btn-secondary float-right mr-1 d-print-none" href="#" onclick="javascript:printContent();" data-abc="true">
+                                        <i class="fa fa-print"></i> Print
+                                    </a>
+                                    <!-- PDF button -->
+                                    <a class="btn btn-sm btn-secondary float-right mr-1 d-print-none" href="#" onclick="exportToPDF();" data-abc="true">
+                                        <i class="fa fa-file-pdf"></i> Export to PDF
+                                    </a>
+                                </div>
+                            </div>
+                             <div class="refund-header-main">
+                                 <div class="col-xs-6 col-sm-6 col-md-6 company-details">
+                                     <div class="refund-right">
+                                         <h5>Happy Insurance</h5>
+                                         <p><i class='bx bxs-phone'></i> 05469425471</p>
+                                         <p><i class='bx bxs-envelope'></i> nurieda@gmail.com</p>
+                                         <p><i class='bx bxs-map'></i> TR</p>
+                                     </div>
+                                 </div>
+                                 <div class="col-xs-6 col-sm-6 col-md-6 customer-details">
+                                    <div class="refund-right">
+                                        <h5 th:text="${customer.firstname + ' ' + customer.lastname}">Customer Name</h5>
+                                        <p><b>Mobile :</b> <span th:text="${customer.phoneNumber}">+1 12345-4569</span></p>
+                                        <p><b>Email :</b> <span th:text="${customer.email}">customer@gmail.com</span></p>
+                                        <p><b>Address :</b> New York, USA</p>
+                                    </div>
+                                </div>
+                             </div>
+                         </div>
+                         
+                         
+                         <div>
+                             <table class="table table-bordered">
+                                 <thead>
+                                     <tr>
+                                         <th>Description</th>
+                                         <th>Amount</th>
+                                     </tr>
+                                 </thead>
+                                 <tbody>
+                                     <tr>
+                                         <td class="col-md-9">Subtotal</td>
+                                         <td class="col-md-3" th:text="${#numbers.formatDecimal(((insurance.offer * 100) / ( (100 + insurance.kdv))), 0, 'COMMA', 2, 'POINT') + ' ₺'}">2,800.00 ₺</td>
+                                     </tr>
+                                     <tr>
+                                         <td class="col-md-9">KDV</td>
+                                         <td class="col-md-3" th:text="${'% ' + insurance.kdv}">% 5</td>
+                                     </tr>
+                                     <tr>
+                                         <td class="col-md-9">Total Amount</td>
+                                         <td class="col-md-3" th:text="${#numbers.formatDecimal(insurance.offer, 0, 'COMMA', 2, 'POINT') + ' ₺'}">2,940.00 ₺</td>
+                                     </tr>
+                                     <tr>
+                                        <td class="col-md-9">Total Usage Time (Day)</td>
+                                        <td class="col-md-3" th:text="${insurance.daysDiff + ' day'}">0 day</td>
+                                    </tr>
 
-	<section id="blog-home" class="container mt-5 pt-5">
-		<h2 class="font-weight-bold pt-5">Home Insurance Cancellation</h2>
-		<hr>
-	</section>
+                                     <tr>
+                                         <td class="text-right"><h2><strong>Total Refund: </strong></h2></td>
+                                         <td class="text-left refund-price"><h2><strong th:text="${#numbers.formatDecimal(insurance.refund, 0, 'COMMA', 2, 'POINT') + ' ₺'}">2,940.00 ₺</strong></h2></td>
+                                     </tr>
+                                 </tbody>
+                             </table>
+                             <div class="operations">
+                                <a class="btn btn-danger price-plan" th:href="@{/seeHomeInsuranceDetails/{id}(id=${insurance.homeId})}" role="button">Cancel</a>
+                                <a class="btn btn-primary price-plan" th:href="@{/deleteHomeInsurance/{id}(id=${insurance.insuranceId})}" role="button">Delete</a>
+                             </div>
+                         </div>
+                         
+                         <div class="row">
+                             <div class="refund-header-main receipt-footer">
+                                 <div class="col-xs-12 col-sm-12 col-md-12 text-left">
+                                     <div class="receipt-right">
+                                         <p><b>Date :</b> <span th:text="${#dates.format(insurance.startDate, 'dd/MM/yyyy HH:mm:ss')}"></span></p>
+                                     </div>
+                                 </div>
+                             </div>
+                         </div>
+                         
+                     </div>    
+                 </div>
+             </div>
+       </div>
+      </div> 
+      <script src="/js/app.js"></script>
+    <script>
+        function printContent() {
+            var contentToPrint = document.getElementById("userPageContent").innerHTML;
+            var originalContent = document.body.innerHTML;
+            document.body.innerHTML = contentToPrint;
+            window.print();
+            document.body.innerHTML = originalContent;
+        }
+        function exportToPDF() {
 
-	<section id="cart-bottom" class="container mt-4">
-		<div class="row">
-			<div class="total col-lg-6 col-md-6 col-12">
-				<div>
-					<h5>BILLING SUMMARY</h5>
-					<div class="d-flex justify-content-between">
-						<h6>Subtotal</h6>
-						 <p th:text="${#numbers.formatDecimal(((insurance.offer * 100) / ( (100 + insurance.kdv))), 0, 'COMMA', 2, 'POINT') + ' ₺'}"></p>
-
-					</div>
-					<div class="d-flex justify-content-between">
-						<h6>KDV</h6>
-						<p th:text="${'% ' + insurance.kdv}"></p>
-					</div>
-					<div class="d-flex justify-content-between">
-						<h6>Total Amount</h6>
-						<p th:text="${#numbers.formatDecimal(insurance.offer, 0, 'COMMA', 2, 'POINT') + ' ₺'}"></p>
-					</div>
-					<div class="d-flex justify-content-between">
-						<h6>Total Usage Time (Day)</h6>
-						<p th:text="${insurance.daysDiff + ' day'}"></p>
-					</div>
-					<hr class="second-hr">
-					<div class="d-flex justify-content-between">
-						<h6>Total Refund</h6>
-						<p th:text="${#numbers.formatDecimal(insurance.refund, 0, 'COMMA', 2, 'POINT') + ' ₺'}"></p>
-					</div>
-
-					<div class="d-flex justify-content-between">
-						<button class="ms-auto"><a
-								th:href="@{/seeHomeInsuranceDetails/{id}(id=${insurance.homeId})}">Cancel</a></button>
-						<button class="ms-2"><a
-								th:href="@{/deleteHomeInsurance/{id}(id=${insurance.insuranceId})}">Delete</a></button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<!-- Footer -->
-	<footer class="mt-4 py-4">
+        }
+        
+    </script>
+    <footer class="py-4">
 		<div class="row container mx-auto pt-4">
 			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
 				<img src="img/logo.png" alt="">
@@ -164,25 +208,12 @@
 			</div>
 			<div class="copyright mt-2">
 				<div class="row container mx-auto">
-					<div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
+					<div class="col-lg-4 col-md-6 col-12 mb-2">
 						<p>Eda Nur Mutlu eInsurance © 2023. All Rights Reserved</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</footer>
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-		integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
-		integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
-		crossorigin="anonymous"></script>
-
-	<script src="/js/app.js"></script>
 </body>
-
 </html>
