--- a/src/main/resources/templates/customerList.html
+++ b/src/main/resources/templates/customerList.html
@@ -118,7 +118,7 @@
 					<span class="username-text">Admin</span>
 				</div>
 				<div class="select-type" ng-click="openModal()">
-					<span class="badge text-bg-info">Change KDV Rate</span>
+					<span class="badge text-bg-info" role="button">Change KDV Rate</span>
 				</div>
 			</div>
 			<div class="user-page">
