--- a/src/main/resources/templates/homeList.html
+++ b/src/main/resources/templates/homeList.html
@@ -70,7 +70,9 @@
 	<!--Navbar-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid px-5">
-          <a class="navbar-brand" href="#">Logo</a>
+          <a class="navbar-brand" href="#">
+                    <img th:src="@{/img/Happy-logoo.png}" src="/src/main/resources/static/img/Happy-logoo.png" alt="happyLogo" class="rounded img-fluid" style="width: 200px;">
+          	</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
