--- a/src/main/resources/templates/customerList.html
+++ b/src/main/resources/templates/customerList.html
@@ -24,7 +24,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<div class="container-fluid px-5">
 			<a class="navbar-brand" href="#">
-                    <img th:src="@{/img/Happy-logoo.png}" src="/src/main/resources/static/img/Happy-logoo.png" alt="happyLogo" class="rounded img-fluid" style="width: 200px;">
+                    <img th:src="@{/img/Happy-Logo.png}" src="/src/main/resources/static/img/Happy-Logo.png" alt="happyLogo" class="rounded img-fluid" style="width: 150px;">
           	</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -112,12 +112,13 @@
 	</script>
 
 	<div class="user-page-wrapper">
-		<div class="user-page-main">
+		<div class="user-page-main pt-5">
 			<div class="user-title">
 				<div class="username-settings">
-					<a href="user-page.html"><span class="badge text-bg-secondary"><i
-								class='bx bx-arrow-back'></i></span></a>
-					<span class="username-text">Admin</span>
+					<a th:href="@{'/index'}">
+						<span class="badge text-bg-danger"><i class='bx bx-log-out'></i></span>
+					</a>
+					<span class="username-text" th:text="Admin"></span>
 				</div>
 				<div class="select-type" ng-click="openModal()">
 					<span class="badge text-bg-info" role="button">Change KDV Rate</span>
