--- a/src/main/resources/templates/customerRegister.html
+++ b/src/main/resources/templates/customerRegister.html
@@ -24,7 +24,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid px-5">
           <a class="navbar-brand" href="#">
-                    <img th:src="@{/img/Happy-logoo.png}" src="/src/main/resources/static/img/Happy-logoo.png" alt="happyLogo" class="rounded img-fluid" style="width: 200px;">
+                    <img th:src="@{/img/Happy-Logo.png}" src="/src/main/resources/static/img/Happy-Logo.png" alt="happyLogo" class="rounded img-fluid" width="150px">
           	</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -60,7 +60,7 @@
 	<!--	End Navbar-->
 	
 	<div class="page-wrapper bg-gra-02">
-		<div class="wrapper py-5">
+		<div class="wrapper">
 			<div class="card">
 				<div class="card-body">
 					<h2 class="title mb-4">Customer Registration Form</h2>
