--- a/src/main/resources/templates/seeHomeInsuranceDetails.html
+++ b/src/main/resources/templates/seeHomeInsuranceDetails.html
@@ -35,7 +35,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid px-5">
 			<a class="navbar-brand" href="#">
-                    <img th:src="@{/img/Happy-logoo.png}" src="/src/main/resources/static/img/Happy-logoo.png" alt="happyLogo" class="rounded img-fluid" style="width: 200px;">
+                    <img th:src="@{/img/Happy-Logo.png}" src="/src/main/resources/static/img/Happy-Logo.png" alt="happyLogo" class="rounded img-fluid" style="width: 200px;">
           	</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
