--- a/src/main/resources/templates/healthInsuranceCalculate.html
+++ b/src/main/resources/templates/healthInsuranceCalculate.html
@@ -83,7 +83,7 @@
                                         <div class="planImageCircleLeft"><img th:src="@{/img/Aviva_Logo.png}" src="/src/main/resources/static/img/Aviva_Logo.png" width="150px" alt=""></div>
                                         <div class="planImageCircleRight"><img th:src="@{/img/plan-circle-bottom.png}" src="/src/main/resources/static/img/plan-circle-bottom.png" alt=""></div>
                                         <small>Aviva</small>
-                                        <h3 th:text="${insurance.offer + '₺'}"></h3>
+                                        <h3 th:text="${insurance.offer + companyList[0].serviceFee + '₺'}"></h3>
                                         <em>Health Insurance</em>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Most Comprehensive Offer</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>All Authorized Services and Special Services</p>
@@ -92,6 +92,7 @@
                                         <p class="porject-plan"><i class='bx bx-check'></i>Roadside Assistance: Yes</p>
                                         <form th:object="${insurance}" method="post" name="myForm" action="/healthResult">
                                             <input type="hidden" name="insuranceId" th:value="${insurance.insuranceId}">
+                                            <input type="hidden" name="companyId" value=1>
                                             <button type="submit" name="result" value="Accepted" class="btn btn-primary price-plan" >Accept</button>
                                         </form>
                                         <p class="planCharges">No hidden Charges</p>
@@ -106,7 +107,7 @@
                                         <div class="planImageCircleLeft"><img th:src="@{/img/Liberty-Mutual-Logo.png}" src="/src/main/resources/static/img/Liberty-Mutual-Logo.png" width="150px" alt=""></div>
                                         <div class="planImageCircleRight"><img th:src="@{/img/plan-circle-bottom.png}" src="/src/main/resources/static/img/plan-circle-bottom.png" alt=""></div>
                                         <small>Liberty Mutual</small>
-                                        <h3 th:text="${insurance.offer + '₺'}"></h3>
+                                        <h3 th:text="${insurance.offer + companyList[1].serviceFee + '₺'}"></h3>
                                         <em> Health Insurance </em>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Most Comprehensive Offer</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>All Authorized Services and Special Services</p>
@@ -115,6 +116,7 @@
                                         <p class="porject-plan"><i class='bx bx-check'></i>Roadside Assistance: Yes</p>
                                         <form th:object="${insurance}" method="post" name="myForm" action="/healthResult">
                                             <input type="hidden" name="insuranceId" th:value="${insurance.insuranceId}">
+                                            <input type="hidden" name="companyId" value=2>
                                             <button type="submit" name="result" value="Accepted" class="btn btn-primary price-plan">Accept</button>
                                         </form>
                                         <p class="planCharges">No hidden Charges</p>
@@ -130,7 +132,7 @@
                                         <div class="planImageCircleRight"><img th:src="@{/img/plan-circle-bottom.png}" src="/src/main/resources/static/img/plan-circle-bottom.png" alt=""></div>
                                         <div class="recommended-price">Recommended</div>
                                         <small>AXA</small>
-                                        <h3 th:text="${insurance.offer + '₺'}"></h3>
+                                        <h3 th:text="${insurance.offer + companyList[2].serviceFee + '₺'}"></h3>
                                         <em> Health Insurance </em>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Most Comprehensive Offer</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>All Authorized Services and Special Services</p>
@@ -139,6 +141,7 @@
                                         <p class="porject-plan"><i class='bx bx-check'></i>Roadside Assistance: Yes</p>
                                         <form th:object="${insurance}" method="post" name="myForm" action="/healthResult">
                                             <input type="hidden" name="insuranceId" th:value="${insurance.insuranceId}">
+                                            <input type="hidden" name="companyId" value=3>
                                             <button type="submit" name="result" value="Accepted" class="btn btn-primary price-plan">Accept</button>
                                         </form>
                                         <p class="planCharges">No hidden Charges</p>
