--- a/src/main/resources/templates/healthInsuranceRefund.html
+++ b/src/main/resources/templates/healthInsuranceRefund.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.com">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car Refund</title>
-    <!-- Bootsrapt -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Car Refund</title>
+	<!-- Bootsrapt -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -19,152 +20,180 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body ng-app="myApp">
-     <!--Navbar-->
+	<!--Navbar-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid px-5">
-          <a class="navbar-brand" href="#">
-                    <img th:src="@{/img/Happy-Logo.png}" src="/src/main/resources/static/img/Happy-Logo.png" alt="happyLogo" class="rounded img-fluid" style="width: 200px;">
-          	</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-            <ul class="navbar-nav mb-2 mb-lg-0 text-center">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index">
-                    <i class='bx bxs-home'></i>
-                    Home
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/index">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/#">Contact Us</a>
-              </li>
-            </ul>
-          </div>
-          <div class="operations">
-            <a href="/login">
-                <i class='bx bxs-user-circle login-icon'></i>
-                Login
-            </a>
-            <a href="/customerRegister">
-                <i class='bx bxs-user-plus register-icon'></i>
-                Register
-            </a>
-          </div>
-        </div>
-      </nav>
+		<div class="container-fluid px-5">
+			<a class="navbar-brand" href="#">
+				<img th:src="@{/img/Happy-logoo.png}" src="/src/main/resources/static/img/Happy-logoo.png"
+					alt="happyLogo" class="rounded img-fluid" style="width: 200px;">
+			</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+				<ul class="navbar-nav mb-2 mb-lg-0 text-center">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/index">
+							<i class='bx bxs-home'></i>
+							Home
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/index">Products</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/#">Contact Us</a>
+					</li>
+				</ul>
+			</div>
+			<div class="operations">
+				<a href="/login">
+					<i class='bx bxs-user-circle login-icon'></i>
+					Login
+				</a>
+				<a href="/customerRegister">
+					<i class='bx bxs-user-plus register-icon'></i>
+					Register
+				</a>
+			</div>
+		</div>
+	</nav>
 	<!--	End Navbar-->
-    <div class="user-page-wrapper" id="userPageContent">
-        <div class="user-page-main">
-          <div class="col-md-12">   
-              <div class="row refund-main">
-                     <div class="receipt-main col-xs-12 col-sm-12 col-md-6 col-xs-offset-1 col-sm-offset-1 col-md-offset-3">
-                         <div class="row refund-user-details">
-                            <div class="refund-print">
-                                <img class="img-responsive" th:src="@{/img/Liberty-Mutual-Logo.png}" src="/src/main/resources/static/img/Liberty-Mutual-Logo.png" width="150px">
-                                <div>
-                                    <a class="btn btn-sm btn-secondary float-right mr-1 d-print-none" href="#" onclick="javascript:printContent();" data-abc="true">
-                                        <i class="fa fa-print"></i> Print
-                                    </a>
-                                    <!-- PDF button -->
-                                    <a class="btn btn-sm btn-secondary float-right mr-1 d-print-none" href="#" onclick="exportToPDF();" data-abc="true">
-                                        <i class="fa fa-file-pdf"></i> Export to PDF
-                                    </a>
-                                </div>
-                            </div>
-                             <div class="refund-header-main">
-                                 <div class="col-xs-6 col-sm-6 col-md-6 company-details">
-                                     <div class="refund-right">
-                                         <h5>Happy Insurance</h5>
-                                         <p><i class='bx bxs-phone'></i> 05469425471</p>
-                                         <p><i class='bx bxs-envelope'></i> nurieda@gmail.com</p>
-                                         <p><i class='bx bxs-map'></i> TR</p>
-                                     </div>
-                                 </div>
-                                 <div class="col-xs-6 col-sm-6 col-md-6 customer-details">
-                                    <div class="refund-right">
-                                        <h5 th:text="${customer.firstname + ' ' + customer.lastname}">Customer Name</h5>
-                                        <p><b>Mobile :</b> <span th:text="${customer.phoneNumber}">+1 12345-4569</span></p>
-                                        <p><b>Email :</b> <span th:text="${customer.email}">customer@gmail.com</span></p>
-                                        <p><b>Address :</b> New York, USA</p>
-                                    </div>
-                                </div>
-                             </div>
-                         </div>
-                         
-                         
-                         <div>
-                             <table class="table table-bordered">
-                                 <thead>
-                                     <tr>
-                                         <th>Description</th>
-                                         <th>Amount</th>
-                                     </tr>
-                                 </thead>
-                                 <tbody>
-                                     <tr>
-                                         <td class="col-md-9">Subtotal</td>
-                                         <td class="col-md-3" th:text="${#numbers.formatDecimal(((insurance.offer * 100) / ( (100 + insurance.kdv))), 0, 'COMMA', 2, 'POINT') + ' ₺'}">2,800.00 ₺</td>
-                                     </tr>
-                                     <tr>
-                                         <td class="col-md-9">KDV</td>
-                                         <td class="col-md-3" th:text="${'% ' + insurance.kdv}">% 5</td>
-                                     </tr>
-                                     <tr>
-                                         <td class="col-md-9">Total Amount</td>
-                                         <td class="col-md-3" th:text="${#numbers.formatDecimal(insurance.offer, 0, 'COMMA', 2, 'POINT') + ' ₺'}">2,940.00 ₺</td>
-                                     </tr>
-                                     <tr>
-                                        <td class="col-md-9">Total Usage Time (Day)</td>
-                                        <td class="col-md-3" th:text="${insurance.daysDiff + ' day'}">0 day</td>
-                                    </tr>
+	<div class="user-page-wrapper" id="userPageContent">
+		<div class="user-page-main">
+			<div class="col-md-12">
+				<div class="row refund-main">
+					<div
+						class="receipt-main col-xs-12 col-sm-12 col-md-6 col-xs-offset-1 col-sm-offset-1 col-md-offset-3">
+						<div class="row refund-user-details">
+							<div class="refund-print">
+								<img class="img-responsive" th:src="@{/img/Liberty-Mutual-Logo.png}"
+									src="/src/main/resources/static/img/Liberty-Mutual-Logo.png" width="150px">
+								<div>
+									<a class="btn btn-sm btn-secondary float-right mr-1 d-print-none" href="#"
+										onclick="javascript:printContent();" data-abc="true">
+										<i class="fa fa-print"></i> Print
+									</a>
+									<!-- PDF button -->
+									<a class="btn btn-sm btn-secondary float-right mr-1 d-print-none" href="#"
+										onclick="exportToPDF();" data-abc="true">
+										<i class="fa fa-file-pdf"></i> Export to PDF
+									</a>
+								</div>
+							</div>
+							<div class="refund-header-main">
+								<div class="col-xs-6 col-sm-6 col-md-6 company-details">
+									<div class="refund-right">
+										<h5 th:text="${company.name}">Happy Insurance</h5>
+										<p><i class='bx bxs-phone'></i><span
+												th:text="${company.phoneNumber}">05469425471</span></p>
+										<p><i class='bx bxs-envelope'></i><span
+												th:text="${company.email}">nurieda@gmail.com</span></p>
+										<p><i class='bx bxs-map'></i><span th:text="${company.country + ', ' + company.city}"></span></p>
 
-                                     <tr>
-                                         <td class="text-right"><h2><strong>Total Refund: </strong></h2></td>
-                                         <td class="text-left refund-price"><h2><strong th:text="${#numbers.formatDecimal(insurance.refund, 0, 'COMMA', 2, 'POINT') + ' ₺'}">2,940.00 ₺</strong></h2></td>
-                                     </tr>
-                                 </tbody>
-                             </table>
-                             <div class="operations">
-                                <a class="btn btn-danger price-plan" th:href="@{/seeHealthInsuranceDetails/{id}(id=${insurance.healthId})}" role="button">Cancel</a>
-                                <a class="btn btn-primary price-plan" th:href="@{/deleteHealthInsurance/{id}(id=${insurance.insuranceId})}" role="button">Delete</a>
-                             </div>
-                         </div>
-                         
-                         <div class="row">
-                             <div class="refund-header-main receipt-footer">
-                                 <div class="col-xs-12 col-sm-12 col-md-12 text-left">
-                                     <div class="receipt-right">
-                                         <p><b>Date :</b> <span th:text="${#dates.format(insurance.startDate, 'dd/MM/yyyy HH:mm:ss')}"></span></p>
-                                     </div>
-                                 </div>
-                             </div>
-                         </div>
-                         
-                     </div>    
-                 </div>
-             </div>
-       </div>
-      </div> 
-      <script src="/js/app.js"></script>
-    <script>
-        function printContent() {
-            var contentToPrint = document.getElementById("userPageContent").innerHTML;
-            var originalContent = document.body.innerHTML;
-            document.body.innerHTML = contentToPrint;
-            window.print();
-            document.body.innerHTML = originalContent;
-        }
-        function exportToPDF() {
+									</div>
+								</div>
+								<div class="col-xs-6 col-sm-6 col-md-6 customer-details">
+									<div class="refund-right">
+										<h5 th:text="${customer.firstname + ' ' + customer.lastname}">Customer Name</h5>
+										<p><b>Mobile :</b> <span th:text="${customer.phoneNumber}">+1 12345-4569</span>
+										</p>
+										<p><b>Email :</b> <span th:text="${customer.email}">customer@gmail.com</span>
+										</p>
+										<p><b>Address :</b> <span th:text="${province}"></span>, Turkiye</p>
+									</div>
+								</div>
+							</div>
+						</div>
 
-        }
-        
-    </script>
-    <footer class="py-4">
+
+						<div>
+							<table class="table table-bordered">
+								<thead>
+									<tr>
+										<th>Description</th>
+										<th>Amount</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="col-md-9">Subtotal</td>
+										<td class="col-md-3"
+											th:text="${#numbers.formatDecimal(((insurance.offer * 100) / ( (100 + insurance.kdv))), 0, 'COMMA', 2, 'POINT') + ' ₺'}">
+											2,800.00 ₺</td>
+									</tr>
+									<tr>
+										<td class="col-md-9">KDV</td>
+										<td class="col-md-3" th:text="${'% ' + insurance.kdv}">% 5</td>
+									</tr>
+									<tr>
+										<td class="col-md-9">Total Amount</td>
+										<td class="col-md-3"
+											th:text="${#numbers.formatDecimal(insurance.offer, 0, 'COMMA', 2, 'POINT') + ' ₺'}">
+											2,940.00 ₺</td>
+									</tr>
+									<tr>
+										<td class="col-md-9">Total Usage Time (Day)</td>
+										<td class="col-md-3" th:text="${insurance.daysDiff + ' day'}">0 day</td>
+									</tr>
+
+									<tr>
+										<td class="text-right">
+											<h2><strong>Total Refund: </strong></h2>
+										</td>
+										<td class="text-left refund-price">
+											<h2><strong
+													th:text="${#numbers.formatDecimal(insurance.refund, 0, 'COMMA', 2, 'POINT') + ' ₺'}">2,940.00
+													₺</strong></h2>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+							<div class="operations">
+								<a class="btn btn-danger price-plan"
+									th:href="@{/seeHealthInsuranceDetails/{id}(id=${insurance.healthId})}"
+									role="button">Cancel</a>
+								<a class="btn btn-primary price-plan"
+									th:href="@{/deleteHealthInsurance/{id}(id=${insurance.insuranceId})}"
+									role="button">Delete</a>
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="refund-header-main receipt-footer">
+								<div class="col-xs-12 col-sm-12 col-md-12 text-left">
+									<div class="receipt-right">
+										<p><b>Date :</b> <span
+												th:text="${#dates.format(now, 'dd/MM/yyyy HH:mm:ss')}"></span></p>
+									</div>
+								</div>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script src="/js/app.js"></script>
+	<script>
+		function printContent() {
+			var contentToPrint = document.getElementById("userPageContent").innerHTML;
+			var originalContent = document.body.innerHTML;
+			document.body.innerHTML = contentToPrint;
+			window.print();
+			document.body.innerHTML = originalContent;
+		}
+		function exportToPDF() {
+
+		}
+
+	</script>
+	<footer class="py-4">
 		<div class="row container mx-auto pt-4">
 			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
 				<img src="img/logo.png" alt="">
@@ -188,7 +217,7 @@
 				</div>
 				<div>
 					<h6 class="text-uppercase">Github</h6>
-					<p>https://github.com/edamuutlu</p>  
+					<p>https://github.com/edamuutlu</p>
 					<p>https://github.com/nuricanbrdmr</p>
 				</div>
 				<div>
@@ -218,4 +247,5 @@
 		</div>
 	</footer>
 </body>
+
 </html>
