Favicon add and Renew Buton Fixed

--- a/src/main/resources/templates/customerRegister.html
+++ b/src/main/resources/templates/customerRegister.html
@@ -5,6 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Customer Registration Form</title>
+		<link rel="icon" type="image/x-icon" th:href="@{/img/Happy-favicon.png}" href="/src/main/resources/static/img/Happy-favicon.png">
+
 	<!-- Bootsrapt -->
 	<link rel="stylesheet" href="" th:href="@{/css/bootstrap.min.css}">
 	<!-- İcon -->
