--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,8 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>SBM Home</title>
-	
+	<title>Happy Insurance Home</title>
+		<link rel="icon" type="image/x-icon" th:href="@{/img/Happy-favicon.png}" href="/src/main/resources/static/img/Happy-favicon.png">
+
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 		crossorigin="anonymous"></script>
@@ -114,10 +115,10 @@
 						Offer</a></button>
 
 			</div>
-			<div onclick="window.location.href='/form'" class="product text-center col-lg-3 col-md-4 col-12">
+			<div onclick="" class="product text-center col-lg-3 col-md-4 col-12">
 				<img class="img-fluid mb-3" src="img/travel.jpg" alt="">
 				<h5 class="p-name">Travel Health Insurance</h5> 
-				<button class="buy-btn">Get Offer</button>
+				<button class="buy-btn">Coming Soon</button>
 
 			</div>
 			<div class="product text-center col-lg-3 col-md-4 col-12">
