--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -646,11 +646,9 @@ body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card 
   margin: 0 auto 5px;
 }
 body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td {
-  padding: 0;
   font-size: 14px;
   max-width: 11ch;
   word-wrap: break-word;
-  padding: 3px 2px;
   text-align: center;
 }
 body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td .badge {
@@ -660,11 +658,25 @@ body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card 
 body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td .badge:hover {
   background-color: rgba(13, 110, 253, 0.7411764706) !important;
 }
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td .Balance {
+    border: none;
+    background: #e9880b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    transition: ease 0.3s all;
+}
+body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td .Balance:hover{
+    background: #ffa52a;
+}
 body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td button {
   border: none;
+  background: none;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 20px;
 }
 body .user-page-wrapper .user-page-main .user-page .user-insurances-admin .card .table td button .dots {
   color: #0d6efd;
