--- a/src/main/resources/templates/carEdit.html
+++ b/src/main/resources/templates/carEdit.html
@@ -4,7 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Traffic Insurance Form</title>
+	<title>Traffic Insurance Edit Form</title>
+		<link rel="icon" type="image/x-icon" th:href="@{/img/Happy-favicon.png}" href="/src/main/resources/static/img/Happy-favicon.png">
+
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
