--- a/src/main/resources/templates/healthInsuranceCalculate.html
+++ b/src/main/resources/templates/healthInsuranceCalculate.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculate</title>
+    <title>Home Insurance Calculate</title>
+    	<link rel="icon" type="image/x-icon" th:href="@{/img/Happy-favicon.png}" href="/src/main/resources/static/img/Happy-favicon.png">
+
     <!-- Bootsrapt -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
@@ -153,6 +155,7 @@
                         <form th:object="${insurance}" method="post" name="myForm" action="/healthResult">
                          <div class="cancel">
                                 <input type="hidden" name="insuranceId" th:value="${insurance.insuranceId}">
+                                <input type="hidden" name="companyId" value=0>
                                 <button type="submit" name="result" value="Canceled" class="btn btn-danger price-plan">Cancel</button>
                          </div>
                         </form>
