--- a/src/main/resources/templates/seeHealthInsuranceDetails.html
+++ b/src/main/resources/templates/seeHealthInsuranceDetails.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>SBM</title>
+	<title>Health Insurance Details</title>
+	<link rel="icon" type="image/x-icon" th:href="@{/img/Happy-favicon.png}" href="/src/main/resources/static/img/Happy-favicon.png">
 
 	<!-- Bootsrapt -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -67,10 +68,10 @@
 			<script th:inline="javascript">
 				document.addEventListener("DOMContentLoaded", function () {
 					var showAbsent = /*[[${showAbsent}]]*/[];
-					var editButton = document.getElementById("editButton");
+					var renewButton = document.getElementById("renewButton");
 
 					if (showAbsent) {
-						editButton.disabled = true; // Butonu tıklanamaz yapar
+						renewButton.disabled = true; // Butonu tıklanamaz yapar
 					}
 				});
 			</script>
@@ -147,7 +148,7 @@
 							<div class="user-settings mb-2">
 								<a type="button" class="btn btn-outline-info"
 									th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}">Edit</a>
-								<a type="button" class="btn btn-outline-danger ms-1"
+								<a type="button" class="btn btn-outline-danger"
 									th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}">Delete</a>
 							</div>
 						</div>
